fix menu clipping

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -239,6 +239,8 @@ ul {
         left: 0;
         right: 0;
         z-index: 2;
+        max-height: 15rem;
+        overflow-y: scroll;
         &.is-open-false {
             display: none;
         }
